dist/paste/Deployment.paste.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: paste
  name: paste
  namespace: paste
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: paste-paste-deployment-c8eece2b
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paste
        cdk8s.io/metadata.addr: paste-paste-deployment-c8eece2b
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: MICROBIN_ADMIN_USERNAME
              value: bschafer
            - name: MICROBIN_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: MICROBIN_ADMIN_PASSWORD
                  name: secrets
            - name: MICROBIN_DEFAULT_EXPIRY
              value: 1week
            - name: MICROBIN_DISABLE_TELEMETRY
              value: "true"
            - name: MICROBIN_ENABLE_READONLY
              value: "true"
            - name: MICROBIN_GC_DAYS
              value: "0"
            - name: MICROBIN_HASH_IDS
              value: "true"
            - name: MICROBIN_HIDE_FOOTER
              value: "true"
            - name: MICROBIN_HIDE_LOGO
              value: "true"
            - name: MICROBIN_HIGHLIGHTSYNTAX
              value: "true"
            - name: MICROBIN_EDITABLE
              value: "true"
            - name: MICROBIN_ETERNAL_PASTA
              value: "true"
            - name: MICROBIN_PRIVATE
              value: "true"
            - name: MICROBIN_SHOW_READ_STATS
              value: "true"
            - name: MICROBIN_PUBLIC_PATH
              value: https://paste.cmdcentral.xyz/
            - name: MICROBIN_QR
              value: "true"
            - name: MICROBIN_TITLE
              value: Cmdcentral Paste
          image: danielszabo99/microbin
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
          name: paste
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
          resources:
            limits:
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /app
              name: pvc-data
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-data
          persistentVolumeClaim:
            claimName: data
            readOnly: false
