dist/paste/Service.paste.yaml
apiVersion: v1
kind: Service
metadata:
  name: paste
  namespace: paste
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    cdk8s.io/metadata.addr: paste-paste-deployment-c8eece2b
  type: ClusterIP
